--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "astro": "^5.13.7"
   },
   "devDependencies": {
+    "@axe-core/playwright": "^4.10.2",
     "@playwright/test": "^1.55.0",
     "@types/node": "^24.3.3"
   }
