--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "test:e2e": "playwright test"
   },
   "dependencies": {
-    "astro": "^5.13.7"
+    "@tailwindcss/vite": "^4.1.13",
+    "astro": "^5.13.7",
+    "tailwindcss": "^4.1.13"
   },
   "devDependencies": {
     "@axe-core/playwright": "^4.10.2",
     "@playwright/test": "^1.55.0",
+    "@tailwindcss/typography": "^0.5.16",
     "@types/node": "^24.3.3"
   }
 }
