--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "test:e2e": "playwright test"
   },
   "dependencies": {
+    "@astrojs/check": "^0.9.4",
     "@tailwindcss/vite": "^4.1.13",
     "astro": "^5.13.7",
-    "tailwindcss": "^4.1.13"
+    "tailwindcss": "^4.1.13",
+    "typescript": "^5.9.2"
   },
   "devDependencies": {
     "@axe-core/playwright": "^4.10.2",
