--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "build": "astro build",
     "preview": "astro preview",
     "astro": "astro",
-    "test:e2e": "playwright test"
+    "test": "vitest",
+    "test:watch": "vitest watch",
+    "test:e2e": "playwright test",
+    "format": "prettier --write ."
   },
   "dependencies": {
     "@astrojs/check": "^0.9.4",
@@ -20,6 +23,9 @@
     "@axe-core/playwright": "^4.10.2",
     "@playwright/test": "^1.55.0",
     "@tailwindcss/typography": "^0.5.16",
-    "@types/node": "^24.3.3"
+    "@types/node": "^24.3.3",
+    "prettier": "3.6.2",
+    "prettier-plugin-astro": "0.14.1",
+    "vitest": "^3.2.4"
   }
 }
